# molecular-fingerprint-bucket-counts

./: .gitignore  README.md  pyproject.toml
output/: bit_counts_AtomPair_2048.csv  bit_counts_AtomPair_fp_size2048.csv  bit_counts_AtomPair_fp_size4096.csv  bit_counts_Avalon_fp_size2048.csv  bit_counts_Avalon_fp_size4096.csv  bit_counts_Avalon_fp_size512.csv  bit_counts_ECFP_1024.csv  bit_counts_ECFP_2048.csv  bit_counts_ECFP_fp_size1024.csv  bit_counts_ECFP_fp_size2048.csv  bit_counts_ECFP_fp_size2048_radius3.csv  bit_counts_ECFP_fp_size4096.csv  bit_counts_Lingo_fp_size1024.csv  bit_counts_Lingo_fp_size2048.csv  bit_counts_MACCS.csv  bit_counts_MACCS_166.csv  bit_counts_MAP_fp_size2048.csv  bit_counts_MHFP_fp_size2048.csv  bit_counts_MHFP_fp_size4096.csv  bit_counts_PubChem.csv  bit_counts_RDKit_fp_size2048.csv  bit_counts_RDKit_fp_size4096.csv  bit_counts_SECFP_fp_size2048.csv  bit_counts_TopologicalTorsion_fp_size2048.csv  bit_counts_TopologicalTorsion_fp_size4096.csv  cooc_AtomPair_fp_size4096.npz  cooc_Avalon_fp_size512.npz  cooc_ECFP_fp_size1024.npz  cooc_ECFP_fp_size2048_radius3.npz  cooc_MACCS.npz  cooc_MHFP_fp_size2048.npz  cooc_MHFP_fp_size4096.npz  cooc_PubChem.npz  cooc_summary_ECFP_fp_size1024.csv  cooc_summary_ECFP_fp_size2048.csv  cooc_summary_ECFP_fp_size4096.csv  cooc_summary_MHFP_fp_size2048.csv  cooc_summary_MHFP_fp_size4096.csv  cooc_summary_PubChem.csv
tests/: test_cooccurrence.py  test_eval_common.py  test_eval_dude.py  test_eval_muv.py  test_experiment.py  test_fingerprint.py  test_normalize.py  test_ntfy.py  test_plot_eval.py  test_sim_cli.py  (+2 more)
(+16 files in other folders)
